fix hrouku start

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <nav id="mainNavbar" class="navbar bg-light navbar-light navbar-expand-lg">
       <div class="container-fluid flex-nowrap">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="./index.html"
           ><img class="img-fluid" src="./imgs/mindSearch-logo-color-half-sz.png" alt=""
         /></a>
         <button
@@ -48,17 +48,17 @@
 
     <div id="header" class="jumbotron jumbotron-fluid">
       <div class="container-fluid text-center">
-        <h1>Mind Search</h1>
-        <h2>Reinventing The Search For Therapy Today</h2>
-        <a href="" class="btn btn-info">Get Started</a>
+        <h1>Mind Search Today</h1>
+        <h2>Reinventing The Search For Therapy</h2>
+        <a id="getstarted" href="./signup.html" class="btn btn-info mst-style">Get Started</a>
       </div>
     </div>
 
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <div id="content">
-            <h3>Why Mind Search</h3>
+          <div id="content" class="mst-h3-style">
+            <h3>Why Mind Search Today</h3>
             <p>
               The <strong>National Alliance On Mental Illness</strong> states that millions of Americans are impacted by
               mental health conditions every year. Approximately 1 in 5 adults in the U.S.
