--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,7 @@
   <body>
     <nav id="mainNavbar" class="navbar bg-light navbar-light navbar-expand-lg">
       <div class="container-fluid flex-nowrap">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="./index.html"
           ><img class="img-fluid" src="./imgs/mindSearch-logo-color-half-sz.png" alt=""
         /></a>
         <button
@@ -128,7 +128,7 @@
                 </label>
               </div>
             </div>
-            <button type="submit" class="btn btn-primary">Sign Up</button>
+            <button type="submit" class="btn btn-primary mst-style">Sign Up</button>
           </div>
         </div>
       </form>
