--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
   <body>
     <nav id="mainNavbar" class="navbar bg-light navbar-light navbar-expand-lg">
       <div class="container-fluid flex-nowrap">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="./index.html"
           ><img class="img-fluid" src="./imgs/mindSearch-logo-color-half-sz.png" alt=""
         /></a>
         <button
@@ -49,7 +49,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <div id="content">
+          <div id="content" class="mst-h3-style">
             <h2>WHY MIND SEARCH</h2>
 
             <ul>
