signup page, chrome fix

--- a/signup.html
+++ b/signup.html
@@ -46,15 +46,13 @@
       </div>
     </nav>
 
-    <div class="container">
-      <form>
-        <div class="row justify-content-center">
-          <div class="col-12 col-lg-4">
-            <div class="row d-none d-lg-flex">
-              <img src="./imgs/andrew-neel-QLqNalPe0RA-unsplash.jpg" alt="" />
-            </div>
-          </div>
-          <div class="col-12 col-lg-8">
+    <div class="container-fluid">
+      <div class="d-flex flex-row justify-content-center">
+        <div class="col col-lg-4 d-none d-lg-block">
+          <img src="./imgs/andrew-neel-QLqNalPe0RA-unsplash.jpg" class="img-fluid" alt="" />
+        </div>
+        <div class="col col-12 col-lg-8">
+          <form>
             <p>
               <strong class="form-text"
                 >Please give us some basic information about yourself before we begin your search.</strong
@@ -129,9 +127,9 @@
               </div>
             </div>
             <button type="submit" class="btn btn-primary mst-style">Sign Up</button>
-          </div>
+          </form>
         </div>
-      </form>
+      </div>
     </div>
 
     <!-- JavaScript -->
